--- a/gold-phone-input.html
+++ b/gold-phone-input.html
@@ -15,6 +15,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../iron-input/iron-input.html">
 <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../paper-listbox/paper-listbox.html">
+<link rel="import" href="../paper-item/paper-item.html">
+<link rel="import" href="../web-animations-js/web-animations-next.min.html">
 
 <!--
 `<gold-phone-input>` is a single-line text field with Material Design styling
@@ -64,6 +68,18 @@ style this element.
     <style>
       :host {
         display: block;
+        --secondary-text-color: #e1e1e1;
+        --paper-font-caption_-_line-height: 18px;
+      }
+
+      .code {
+        width: 62px;
+        float: left;
+        margin-right: 20px;
+      }
+
+      .code .floated-label-placeholder {
+        margin-top: 1px;
       }
 
       /* TODO: This should be a dropdown */
@@ -73,7 +89,7 @@ style this element.
       }
 
       .country-code {
-        width: 40px;
+        width: 62px;
         @apply --gold-phone-input-country-code;
       }
 
@@ -111,16 +127,37 @@ style this element.
       input:-ms-input-placeholder {
         color: var(--paper-input-container-color, var(--secondary-text-color));
       }
+      .container {
+        width: calc(100% - 96px);
+        float: left;
+        margin-top: 1px;
+      }
+      .plus-item {
+        width: 14px;
+        float: left;
+        padding-top: 27px;
+      }
     </style>
-    <paper-input-container id="container"
+
+    <div id="plus-item" class="plus-item">+</div>
+
+    <paper-dropdown-menu id="code" class="code" value="{{countryCode}}" label="[[codeLabel]]">
+      <paper-listbox slot="dropdown-content">
+        <template is="dom-repeat" items="[[countries]]" as="country">
+          <paper-item>[[country.code]]</paper-item>
+        </template>
+      </paper-listbox>
+    </paper-dropdown-menu>
+
+    <paper-input-container
+        id="container"
+        class="container"
         disabled$="[[disabled]]"
         no-label-float="[[noLabelFloat]]"
         always-float-label="[[_computeAlwaysFloatLabel(alwaysFloatLabel,placeholder)]]"
         invalid="[[invalid]]">
 
       <label slot="label" hidden$="[[!label]]">[[label]]</label>
-
-      <span slot="prefix" prefix class="country-code">+[[countryCode]]</span>
 
       <span id="template-placeholder"></span>
 
@@ -186,14 +223,32 @@ style this element.
       properties: {
 
         /**
-         * The label for this input.
+         * The label for phone number input.
          */
-        label: {type: String, value: 'Phone number'},
+        label: {
+          type: String,
+          value: 'Phone number'
+        },
+
+        /**
+         * The label for country code input.
+         */
+        codeLabel: {
+          type: String,
+          value: 'Code'
+        },
+
+        countries: {
+          type: Array
+        },
 
         /*
          * The country code that should be recognized and parsed.
          */
-        countryCode: {type: String, value: '1'},
+        countryCode: {
+          type: String,
+          value: '1'
+        },
 
         /*
          * The format of a valid phone number, including formatting but excluding
@@ -216,6 +271,17 @@ style this element.
           type: String,
           notify: true,
           computed: '_computeInternationalValue(countryCode, value)'
+        },
+
+        /**
+         * Unformatted international format of the input value.
+         *
+         * @type {String}
+         */
+        unformattedInternationalValue: {
+          type: String,
+          notify: true,
+          computed: '_computeUnformattedInternationalValue(countryCode, value)'
         }
       },
 
@@ -365,12 +431,22 @@ style this element.
 
       /**
        * Returns the phone number value prefixed by the country code or simply
-       * the value if the country code is not set. When	`value` equals
+       * the value if the country code is not set. When `value` equals
        * "3-44-55-66-77" and the `countryCode` is "33", the `internationalValue`
        * equals "+(33)3-44-55-66-77"
        */
       _computeInternationalValue: function(countryCode, value) {
         return countryCode ? '+(' + countryCode + ')' + value : value;
+      },
+
+      /**
+       * Returns the unformatted phone number value prefixed by the country code
+       * or simply the value if the country code is not set. When `value` equals
+       * "3-44-55-66-77" and the `countryCode` is "33", the `internationalValue`
+       * equals "+33344556677"
+       */
+      _computeUnformattedInternationalValue: function(countryCode, value) {
+        return (value != undefined) ? '+' + countryCode + value.replace(/\-/g,'') : '';
       }
     });
   </script>
